--- a/res-index.html
+++ b/res-index.html
@@ -126,8 +126,21 @@
     }
   </script>
 </head>
-<body onload="populate()" style="scroll:none;">
-
+<body onload="populate()">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Housie</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Page 1</a></li>
+        <li><a href="#">Page 2</a></li>
+        <li><a href="#">Page 3</a></li>
+      </ul>
+    </div>
+  </nav>
+  
 <div class="container-fluid">
     
     <div class="row">
